adding launch.json

--- a/my-app/settings.toml
+++ b/my-app/settings.toml
@@ -5,6 +5,9 @@ DB_PASSWORD = "app_password"
 DATABASE_NAME = "app"
 
 [development]
+DB_HOST = "localhost"
+
+[docker]
 DB_HOST = "postgres"
 
 [testing]
