--- a/my-app/pyproject.toml
+++ b/my-app/pyproject.toml
@@ -28,3 +28,5 @@ python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+config_file = "mypy.ini"
+ignore_missing_imports = true
