--- a/my-app/pyproject.toml
+++ b/my-app/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.10"
 quart = "0.18.4"
 werkzeug = "2.3.7"
 dynaconf = "3.1.12"
+psycopg2-binary = "^2.9.10"
+databases = {version = "^0.9.0", extras = ["asyncpg"]}
+sqlalchemy = "^2.0.36"
+alembic = "^1.13.3"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
