--- a/my-app/alembic.ini
+++ b/my-app/alembic.ini
@@ -61,8 +61,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
-
+# added the url of the database to use
+sqlalchemy.url = postgresql://%(DB_USERNAME)s:%(DB_PASSWORD)s@%(DB_HOST)s:5432/%(DATABASE_NAME)s
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
