--- a/my-app/pyproject.toml
+++ b/my-app/pyproject.toml
@@ -14,6 +14,8 @@ psycopg2-binary = "^2.9.10"
 databases = {version = "^0.9.0", extras = ["asyncpg"]}
 sqlalchemy = "^2.0.36"
 alembic = "^1.13.3"
+pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
