adding github action

--- a/my-app/settings.toml
+++ b/my-app/settings.toml
@@ -15,6 +15,11 @@ TESTING = true
 DB_HOST = "localhost"
 DATABASE_NAME = "app_test"
 
+[testing_gha]
+TESTING = true
+DB_HOST = "localhost"
+DATABASE_NAME = "app_test"
+
 [staging]
 DB_HOST = "staging-db"
 
