--- a/my-app/pyproject.toml
+++ b/my-app/pyproject.toml
@@ -30,6 +30,9 @@ build-backend = "poetry.core.masonry.api"
 [tool.black]
 line-length = 88
 target-version = ['py310']
+exclude = '''
+  /migrations/
+'''
 
 [tool.mypy]
 python_version = "3.10"
