--- a/.github/workflows/my-app-ci-cd.yml
+++ b/.github/workflows/my-app-ci-cd.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Run Black
         run: |
-          poetry run black --check --line-length=80 .
+          poetry run black --check .
 
       - name: Run mypy
         run: |
