--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.8"
 services:
   web:
     build: 
-      context: ./my-app
+      context: ./backend-service
       target: development
     ports:
       - "5001:5001"
     volumes:
-      - ./my-app:/app
+      - ./backend-service:/app
     links:
       - db:postgres
     container_name: app_web_1
@@ -21,6 +21,16 @@ services:
       DB_PASSWORD: app_password
       DB_HOST: postgres
       DATABASE_NAME: app
+
+  test:
+    extends: web
+    environment:
+      ENV_FOR_DYNACONF: docker-testing
+      PORT: 5001
+      SECRET_KEY: "you-will-never-guess"
+      DB_USERNAME: app_user
+      DB_PASSWORD: app_password
+    container_name: app_test_1
 
   db:
     image: postgres:14-alpine
