--- a/backend-service/settings.toml
+++ b/backend-service/settings.toml
@@ -20,6 +20,11 @@ TESTING = true
 DB_HOST = "db"
 DATABASE_NAME = "app_test"
 
+[testing_gha]
+TESTING = true
+DB_HOST = "localhost"
+DATABASE_NAME = "app_test"
+
 [staging]
 DB_HOST = "staging-db"
 
