launch.json update

--- a/backend-service/.vscode/launch.json
+++ b/backend-service/.vscode/launch.json
@@ -11,9 +11,7 @@
         "module": "quart",
         "env": {
           "QUART_APP": "${workspaceRoot}/my_app/manage.py",
-          "QUART_DEBUG": "1",
-          "ENV_FOR_DYNACONF": "development"
-        },
+          "QUART_DEBUG": "1"        },
         "envFile": "${workspaceFolder}/my_app/.quartenv",                
         "args": [
           "run",
