--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,12 +7,16 @@
         "web"
     ],
     "workspaceFolder": "/app",
-    "overrideCommand": false,
+    "overrideCommand": true,
+    "postStartCommand": "tail -f /dev/null",
+    "remoteEnv": {
+        "ENV_FOR_DYNACONF": "DEVCONTAINER"
+    },
     "customizations": {
         "vscode": {
             "settings": {
                 "python.pythonPath": "/usr/bin/python3"
-            },
+                },
             "extensions": [
                 "ms-python.python",
                 "ms-python.black-formatter",
